# mcu-pin-check-firmware

./: .gitignore  README.md
ch32v002-uart/: .template  CH32V002F4P6.launch
ch32v002-uart/.mrs/: CH32V002F4P6.mrs-workspace
ch32v002-uart/Peripheral/inc/: ch32v00X.h
ch32v002-uart/User/: main.c
ch32v003-swd/: Makefile  README.md  firmware.c  firmware.hex  firmware.lst  firmware.map
ch32v003-swd/ch32v003fun/: ch32v003fun.mk
ch32v003f4p6/: .editorconfig  platformio.ini
ch32v003f4p6/src/: main.c
ch32v006-uart/: .cproject  .template  ch32v006-uart.launch
ch32v006-uart/.mrs/: ch32v006-uart.mrs-workspace
ch32v006-uart/Debug/: debug.c
ch32v006-uart/Peripheral/inc/: ch32v00X.h
ch32v006-uart/User/: main.c  system_ch32v00X.c
ch32v203c8t6/: platformio.ini
ch32v203c8t6/lib/Ld/: Link.ld
ch32v203c8t6/src/: main.c
ch32x035/: README.md  platformio.ini
ch32x035/src/: main.c
esp32/: .editorconfig
esp32/src/: main.cpp
esp32c2/: .gitignore  README.md  platformio.ini
esp32c2/src/: main.cpp
esp32c3/: platformio.ini
esp32c3/src/: main.cpp
esp32c6/: build_merged_firmware.sh  esp32c6.ino
esp32h2/: README.md  build_merged_firmware.sh  esp32h2.ino
esp32s3/: README.md
esp32s3/src/: main.cpp
release/: ch32v002-uart.hex  ch32v003_swdio-log.elf  ch32v003f4p6-sdi.elf  ch32v003f4p6-uart.elf  ch32v003f4p6.elf  ch32v006-uart.hex  ch32v203c8t6.elf  ch32x035.elf  rp2040.elf  rp2040.uf2  rp2350.elf  rp2350.uf2  stm32f103f6.elf  stm32g030f6.elf  stm32g431.elf  stm32g431cb.elf
rp2040/: .gitignore  CMakeLists.txt  rp2040.c
rp2350/: .gitignore  CMakeLists.txt  rp2350.c
stm32f103/: platformio.ini
stm32f103c8/: platformio.ini
stm32f103c8/include/: main.h
stm32f103c8/src/: main.c  stm32f1xx_hal_msp.c
stm32f103c8t6/: platformio.ini
stm32f103c8t6/src/: stm32f1xx_hal_msp.c
stm32g030f6/: platformio.ini
stm32g030f6/src/: main.c  stm32g0xx_hal_msp.c
stm32g431/: stm32g431cbux.ioc
stm32g431/src/: main.c  stm32g4xx_hal_msp.c
stm32g431cb/: platformio.ini
stm32g431cb/include/: stm32g4xx_hal_conf.h
stm32g431cb/src/: main.c
